--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.1",
   "description": "Reddit front page PWA demo",
   "dependencies": {
-    "express": "^4.15.3",
-    "express-handlebars": "^3.0.0"
+    "express": "^4.15.3"
+  },
+  "scripts": {
+    "start": "node server.js"
   }
 }
